add remote file upload and transfer to DB ; add more configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,23 @@
+# 数据源配置
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/indoorManagement
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+# not log sql statements
 spring.jpa.show-sql=false
+# auto generate table
 spring.jpa.generate-ddl=true
 spring.jpa.database=postgresql
 
 server.port=8099
+# 服务路径前缀
 server.servlet.context-path= /indoor-management
+
+# 上传的单文件大小限制
+spring.servlet.multipart.max-file-size=100MB
+# 单次上传的总文件大小限制
+spring.servlet.multipart.max-request-size=1000MB
+# 临时文件存储位置
+spring.servlet.multipart.location = E:/storage/upload/temp
+
+# 自定义配置部分
+file.targetPath = E:/storage/upload/
