--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,4 @@ spring.servlet.multipart.max-request-size=1000MB
 spring.servlet.multipart.location = E:/storage/upload/temp
 
 # 自定义配置部分
-file.targetPath = E:/storage/upload/
+file.targetPath = E:/storage/
